# linktree

./: .copier-answers.yml  .gitignore  Cargo.toml  Readme.md  Trunk.toml  build.rs
src/: buttons.rs  linktree.rs  main.rs
static/: data.json  index.html
static/styles/: academicons.scss  forkawesome.scss  index.sass
